--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.46.0",
     "core-js": "^3.8.3",
     "pinia": "^2.0.28",
     "vue": "^3.2.13",
